--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ section {
 }
 
 .navbar-left ul li a:hover {
-  background-color: black;
+  background-color: #0077b5;
   color: white;
 }
 
@@ -77,7 +77,7 @@ section {
 .burger span {
   width: 100%;
   height: 3px;
-  background-color: black;
+  background-color: #0077b5;
   transition: all 0.3s ease;
 }
 
